--- a/app/blogs/blogs.module.scss
+++ b/app/blogs/blogs.module.scss
@@ -15,6 +15,9 @@ $darkblue: rgb(0,0,150);
 @mixin transition{
     transition: 300ms ease-in-out;
 }
+@mixin transitionslow{
+    transition: 500ms ease-in-out;
+}
 
 .container{
     width: 98vw;
@@ -47,8 +50,9 @@ $darkblue: rgb(0,0,150);
         font-weight: 300;
         margin: 0 .25rem;
         padding: .25rem 2.25rem .35rem;    
-        @include transition;
         border-radius: 4px;
+        border-bottom: 4px solid transparent;
+        @include transition;
         &:hover{
             background-color: #202020;
         }&:active{
@@ -61,12 +65,12 @@ $darkblue: rgb(0,0,150);
 }
 
 #chand{
-    @include transition;
+    @include transitionslow;
     margin-right: 30px;
     cursor: pointer;
     padding: 0 19px;
     &:hover{
-        filter: drop-shadow(0px 0px 10px #ddd);
+        filter: drop-shadow(0px 0px 10px #eee);
     }
 }
 .pfpandback{
