--- a/app/globals.css
+++ b/app/globals.css
@@ -25,16 +25,20 @@ html{
 }
 
 /* custom scroll bar */
-body::-webkit-scrollbar {
+body::-webkit-scrollbar, textarea::-webkit-scrollbar {
   width: 6px;
 }
 
-body::-webkit-scrollbar-track {
-  background: #181818;      
+body::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 body::-webkit-scrollbar-thumb {
-  display: none;
-  background-color: #202020;
+  display: none !important;
+  background-color: #333;
   border-radius: 20px;
+}
+
+textarea::-webkit-scrollbar-thumb{
+  background: linear-gradient(180deg, rgba(34, 34, 34, 0.00) 13.01%, #333 13.02%, #333 90%, rgba(51, 51, 51, 0.00) 90.01%);  border-radius: 20px; 
 }
