--- a/app/components/blog.module.scss
+++ b/app/components/blog.module.scss
@@ -2,12 +2,33 @@
     outline: 1px solid orange;
 }
 
+// Dark Mode colors
+$bgDark: #181818;
+$secondaryDark: #2E8BB1;
+$navTextDark: rgba(255, 255, 255, .6);
+$primaryTextDark: #F1F5F9;
+
+// Light Mode colors
+$secondaryLight: #FFA500;
+$bgLight: #F4F6F0;
+$navTextLight: rgba(0, 0, 0, .6);
+$primaryTextLight: #000000;
+
+// @mixin theme($mode){
+//     @if ($mode == light){ 
+//         background-color: $bgLight;
+//         color: $primaryTextLight;
+//     }@else{
+//         background-color: $bgDark;
+//         color: $primaryTextDark;    
+//     }
+// }
+
 #blogBox{
     display: flex;
     justify-content: space-between;
-    color: #F1F5F9;
+    color: $primaryTextDark;
     letter-spacing: 0.44px;
-
     .headingsContainer{
         width: 80%;
     }
@@ -20,7 +41,7 @@
     .subheading, .date, .minuteRead{
         margin: .5rem 0;
         font-size: 15px;
-        font-weight: 200;
+        font-weight: 300;
         line-height: 150%;
     }
     
@@ -29,10 +50,10 @@
         text-align: right;
     }
     .minuteRead{
-        color: #F1F5F9;
+        color: $primaryTextDark;
     }
     .date{
-        color: #2E8BB1;
+        color: $secondaryDark;
     }
 }
  
@@ -40,8 +61,8 @@
     margin-bottom: 50px;
     margin-top: 0;
     border: none;
-    border-bottom: 1px solid #2f2f2f;
-    box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 25%);
+    // border-bottom: 1px solid rgba(255,255,255,.1);
+    // box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 25%);
 }
 
 #comingSoon{
@@ -53,6 +74,32 @@
     letter-spacing: 0.5px;
     padding-top: 50%;
 }
+
+
+
+// light dark theme setup
+
+.blogBoxLight{
+    color: $primaryTextLight !important;
+}
+.minuteReadLight{
+    color: $primaryTextLight !important;
+}
+.dateDark{
+    color: $secondaryDark;
+}
+.dateLight{
+    color: $secondaryLight !important;
+}
+.hrLight{
+    border-bottom: 1px solid #E0E0E0;
+    box-shadow: 0px 3px 5px 0px rgba(255,255,255,.3);
+}
+.hrDark{
+    border-bottom: 1px solid rgba(255,255,255,.1);
+    box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 25%);
+}
+
 
 /* Large smartphones and small tablets (iPad mini, Nexus 7, etc.) */
 @media only screen and (max-width : 768px){
@@ -73,7 +120,20 @@
     .mainheading{
         font-size: 18px !important;
     }
-    .headingsContainer{
-        width: 75% !important;
+    #blogBox{
+        flex-direction: column;
+        .headingsContainer{
+            width: 100%;
+        }
+        .DateAndTimeContainer{
+            display: flex;
+            margin-right: auto;
+            flex-direction: row-reverse;
+            gap: 0.4rem;
+        }
+        .minuteRead, .date{
+            margin: 0;
+            margin-bottom: 0.5rem;
+        }
     }
 } 
