--- a/app/components/TextAnimation.module.scss
+++ b/app/components/TextAnimation.module.scss
@@ -3,6 +3,7 @@
     font-family: 'Alegreya Sans SC', sans-serif;
     font-size: 20px;
     letter-spacing: 1px;
+    text-shadow: 0 0 black;
 }
 .subheadDark{
     -webkit-text-stroke: white 0.01rem;
