--- a/app/App.css
+++ b/app/App.css
@@ -69,9 +69,9 @@
     padding: 1.5rem;
     transition: 500ms ease-in-out;
     /* temporary */
-    position: fixed;
+    /* position: fixed;
     right: 0%;
-    z-index: 3;
+    z-index: 3; */
   }
   #chand:hover{
     transition: 500ms ease-in-out;
@@ -270,6 +270,8 @@
     outline: none;
     padding: .5rem;
     cursor:pointer;
+    /* for cursorcicrle */
+    z-index:2;
   }
   input,textarea{
     background-color: transparent;
@@ -633,6 +635,9 @@
 
   /* Small smartphones (iPhone 4, Galaxy S2, etc.) */
   @media only screen and (max-width : 475px){
+    .circlecursor{
+      display: none;
+    }
     body{
       display: block;
     }
