--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,7 @@ html{
   scroll-snap-type: y proximity;
   scroll-behavior: smooth;
   scroll-snap-stop: always;
+  cursor: none !important;
 }
 
 /* custom scroll bar */
