--- a/app/App.css
+++ b/app/App.css
@@ -115,6 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
   }
   #profileContainer img{
     height: 190px;
@@ -775,6 +776,7 @@
       font-weight: 200;
       font-size: 12px;
       transition: transform 500ms ease-in-out;
+      z-index: 3;
     }
     #navigator a{
       padding: 0.3rem 0.85rem;
