--- a/app/blogs/blogs.module.scss
+++ b/app/blogs/blogs.module.scss
@@ -92,25 +92,63 @@ $primaryTextLight: #000000;
     margin: auto;
     justify-content: space-around;
     border-bottom: 1px solid #2F2F2F;
-    // box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.50);
-    a{
-        cursor:default;
-        list-style-type: none;
-        font-weight: 300;
-        margin: 0 .25rem;
-        padding: .25rem 2.25rem .35rem;    
-        border-radius: 4px;
-        border-bottom: 4px solid transparent;
-        @include transition;
-        &:hover{
-            background-color: #202020;
-        }&:active{
-            // after fucntionality
-            color: $primaryTextDark;
-            font-weight: 500;
-            border-bottom: 4px solid $secondaryDark;
-        }
-    }
+}
+
+.radioTileDark, .radioTileLight {
+    cursor: default;
+    list-style-type: none;
+    font-weight: 300;
+    margin: 0 .25rem;
+    padding: .25rem 2.25rem .35rem;
+}
+
+.inputContainer {
+    position: relative;
+}
+
+.inputContainer, .radioTileDark, .radioTileLight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    border-radius: 4px;
+    @include transition;
+}
+
+.inputContainer input {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    cursor: default;
+    outline: 1px solid red;
+    z-index: 2;
+    opacity: 0;
+}
+
+input:default + .radioTileDark{
+    border-bottom: 4px solid transparent;
+}
+
+input:checked + .radioTileDark {
+    color: $primaryTextDark;
+    font-weight: 400;
+    border-bottom: 4px solid $secondaryDark;
+}
+
+input:checked + .radioTileLight {
+    color: $primaryTextLight;
+    font-weight: 400;
+    border-bottom: 4px solid $secondaryLight;
+}
+
+input:hover + .radioTileDark {
+    background-color: #202020;
+}
+
+input:hover + .radioTileLight {
+    background-color: #E0E0E0;
 }
 
 #chand{
@@ -182,14 +220,6 @@ $primaryTextLight: #000000;
 .navLinksLight {
     border-bottom: 1px solid #E0E0E0;
     color: $navTextLight;
-    a{
-        &:hover{
-            background-color: #20202010;
-        }&:active{
-            color: $primaryTextLight;
-            border-bottom: 4px solid $secondaryLight;
-        }
-    }
 }
 .containerDark{
     background-color: $bgDark;
