db p4oj3d5w upeq53

--- a/app/App.module.scss
+++ b/app/App.module.scss
@@ -128,6 +128,14 @@ $primaryTextLight: #333333;
     border: 4px solid #A0AAAD !important;
     background: #C8CDCD;
 }
+.TypescriptLight{
+    border: 4px solid rgba(0, 88, 156, 0.20) !important;
+    background: rgba(0, 88, 156, 0.20);
+}
+.FirebaseLight{
+    border: 4px solid rgba(255, 216, 58, 0.20) !important;
+    background: rgba(255, 137, 58, 0.15);
+}
 .JavaScriptLight{
     border: 4px solid rgba(255, 216, 58, 0.20) !important;
     background: rgba(255, 216, 58, 0.15);
