--- a/app/App.module.scss
+++ b/app/App.module.scss
@@ -92,54 +92,57 @@ $primaryTextLight: #333333;
 #boldLight{
     -webkit-text-stroke: .01rem black;
 }
+
 .ReactJSLight{
-    border: 4px solid rgba(97, 218, 251, 0.20) !important;
-    background: rgba(97, 218, 251, 0.20);
+    border: 4px solid #61dafb33 !important;
+    background: #61dafb33;
 }
 .CppLight{
-    border: 4px solid rgba(0, 88, 156, 0.20) !important;
-    background: rgba(0, 88, 156, 0.20);
+    border: 4px solid #00589c33 !important;
+    background: #00589c33;
 }
 .NodeJSLight{
-    border: 4px solid rgba(109, 167, 93, 0.20) !important;
-    background: rgba(109, 167, 93, 0.20);
+    border: 4px solid #6da75d33 !important;
+    background: #6da75d33;
 }
 .ExpressJSLight{
-    border: 4px solid rgba(255, 255, 255, 0.50) !important;
-    background: rgba(51, 51, 51, 0.15);
+    border: 4px solid #ffffff80 !important;
+    background: #33333326;
 }
 .NextJSLight{
-    border: 4px solid rgba(255, 255, 255, 0.50) !important;
-    background: rgba(51, 51, 51, 0.15);
+    border: 4px solid #ffffff80 !important;
+    background: #33333326;
 }
 .HtmlLight{
-    border: 4px solid #AEBBEF !important;
-    background: #D0D7F2;
+    border: 4px solid #aebbef !important;
+    background: #d0d7f2;
 }
 .SassLight{
-    border: 4px solid #E4B2C8 !important;
-    background: #F1DCE3;
+    border: 4px solid #e4b2c8 !important;
+    background: #f1dce3;
 }
 .FigmaLight{
-    border: 4px solid #ff726220 !important;
-    background: #ff726220
+    border: 4px solid #ff726233 !important;
+    background: #ff726233;
 }
 .MongodbLight{
-    border: 4px solid #A0AAAD !important;
-    background: #C8CDCD;
+    border: 4px solid #a0aaad !important;
+    background: #c8cdcd;
 }
 .TypescriptLight{
-    border: 4px solid rgba(0, 88, 156, 0.20) !important;
-    background: rgba(0, 88, 156, 0.20);
+    border: 4px solid #00589c33 !important;
+    background: #00589c33;
 }
 .FirebaseLight{
-    border: 4px solid rgba(255, 216, 58, 0.20) !important;
-    background: rgba(255, 137, 58, 0.15);
+    border: 4px solid #ffd83a33 !important;
+    background: #ff893a26;
 }
 .JavaScriptLight{
-    border: 4px solid rgba(255, 216, 58, 0.20) !important;
-    background: rgba(255, 216, 58, 0.15);
+    border: 4px solid #ffd83a33 !important;
+    background: #ffd83a26;
 }
+
+
 .projectBoxDark{
     box-shadow: 0px 0px 10px 0px black;
 }
