--- a/app/App.css
+++ b/app/App.css
@@ -228,7 +228,7 @@ h1 {
   position: absolute;
   top: -125%;
   font-size: 10px;
-  background-color: rgba(0, 0, 0, 90%);
+  background-color: #030303;
   border-radius: 15px;
   padding: 1rem;
   width: 225%;
@@ -252,7 +252,7 @@ h1 {
   height: 0;
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
-  border-top: 15px solid rgba(0, 0, 0, 90%);
+  border-top: 15px solid #030303;
   filter: drop-shadow(0px 10px 10px rgba(255, 255, 255, 0.05));
   visibility: hidden;
   opacity: 0;
